--- a/app/src/main/res/layout/item_home_item_comment_list.xml
+++ b/app/src/main/res/layout/item_home_item_comment_list.xml
@@ -3,14 +3,14 @@
     android:id="@+id/item_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
+    android:background="#c9caca"
     android:clickable="true">
 
     <RelativeLayout
         android:id="@+id/item_info_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="#f7f7f7"
         android:clickable="true">
         <com.hatcher.app.view.RoundImageView
             android:id="@+id/header"
