--- a/app/src/main/res/layout/item_home_new.xml
+++ b/app/src/main/res/layout/item_home_new.xml
@@ -95,8 +95,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/btn_comment"
                 android:background="@null"
-                android:divider="@null"
-                android:dividerHeight="0px"
+                android:divider="#c9caca"
+                android:dividerHeight="1px"
                 android:layout_marginRight="15dp"
                 android:layout_marginLeft="15dp"
             />
